force-app/main/default/objects/Opportunity/fields/Allow_Exclusive_Varieties__c.field-meta.xml
<CustomField>
    <fullName>Allow_Exclusive_Varieties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Exclusive Varieties</label>
    <type>Checkbox</type>
</CustomField>