force-app/main/default/objects/Opportunity/fields/Anexo_Complementar__c.field-meta.xml
<CustomField>
    <fullName>Anexo_Complementar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que solamente se informa en la carga de Anexo I.</description>
    <label>Anexo Complementar</label>
    <type>Checkbox</type>
</CustomField>