force-app/main/default/objects/Opportunity/fields/Anexo_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Anexo_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades (Opp Relacionada)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>