force-app/main/default/objects/Opportunity/fields/Approval_Target__c.field-meta.xml
<CustomField>
    <fullName>Approval_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Target</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>