force-app/main/default/objects/Opportunity/fields/Aprovar_Todas_Categorias__c.field-meta.xml
<CustomField>
    <fullName>Aprovar_Todas_Categorias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovar Todas Categorias</label>
    <type>Checkbox</type>
</CustomField>