force-app/main/default/objects/Opportunity/fields/Bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Bloqueo__c</fullName>
    <description>Motivo de Bloqueo de Cabecera Oferta desde SAP.</description>
    <label>Bloqueo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z4 - BR - Bloqueio Salesforce</fullName>
            </value>
            <value>
                <fullName>Z2 - Bloqueio Contrato</fullName>
            </value>
            <value>
                <fullName>Z3 - Bloqueio Pagamento</fullName>
            </value>
            <value>
                <fullName>Z6 - BR - Bloqueio – Contrato/Financeiro</fullName>
            </value>
            <value>
                <fullName>Z0 - BR - Recusado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>