force-app/main/default/objects/Opportunity/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Branch Name)</relationshipLabel>
    <relationshipName>Opportunities_Branchs</relationshipName>
    <type>Lookup</type>
</CustomField>