force-app/main/default/objects/Opportunity/fields/Canal_de_Distribucion__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_Distribucion__c</fullName>
    <description>Valor que baja a SAP como Canal de distribucion en la interfaz. Se completa automaticamente al hacer el alta de pedido en SAP.</description>
    <label>SAP Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>