force-app/main/default/objects/Opportunity/fields/Condicion_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Condicion_de_Pago__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZC05 Net 30 days from shipping date</fullName>
                <default>true</default>
                <label>Net 30 days from shipping date</label>
            </value>
            <value>
                <fullName>ZC04 Net 20 days from shipping date</fullName>
                <label>Net 20 days from shipping date</label>
            </value>
            <value>
                <fullName>ZC05 - S4 test Condition</fullName>
                <label>S4 test Condition</label>
            </value>
            <value>
                <fullName>ZC00 Due Upon Receipt</fullName>
                <label>Due Upon Receipt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>