force-app/main/default/objects/Opportunity/fields/Contact_of_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Contact_of_Shipping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact of Shipping</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Ship_To__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact of Shipping)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>