force-app/main/default/objects/Opportunity/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Dealer)</relationshipLabel>
    <relationshipName>Dealer_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>