force-app/main/default/objects/Opportunity/fields/Dealer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Summary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealer Summary</label>
    <referenceTo>Dealer_Summary__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>