force-app/main/default/objects/Opportunity/fields/discharge_date_sap__c.field-meta.xml
<CustomField>
    <fullName>discharge_date_sap__c</fullName>
    <label>discharge date sap</label>
    <type>DateTime</type>
</CustomField>