force-app/main/default/objects/Opportunity/fields/docRel__c.field-meta.xml
<CustomField>
    <fullName>docRel__c</fullName>
    <label>docRel</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>