force-app/main/default/objects/Opportunity/fields/Email_Addess__c.field-meta.xml
<CustomField>
    <fullName>Email_Addess__c</fullName>
    <label>Email Addess</label>
    <type>Email</type>
</CustomField>