force-app/main/default/objects/Opportunity/fields/Epoca_de_Plantio__c.field-meta.xml
<CustomField>
    <fullName>Epoca_de_Plantio__c</fullName>
    <description>Se utiliza Verano por default. Al indicar Invierno se está indicando lo que antes era la Safrina.</description>
    <label>Epoca de Plantio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verão</fullName>
            </value>
            <value>
                <fullName>Inverno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>