force-app/main/default/objects/Opportunity/fields/Fecha_de_Alta_SAP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Alta_SAP__c</fullName>
    <label>Fecha de Alta SAP</label>
    <type>DateTime</type>
</CustomField>