force-app/main/default/objects/Opportunity/fields/Filled__c.field-meta.xml
<CustomField>
    <fullName>Filled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the opportunity products  of this opportunity should have been filled with other opportunity product values.</description>
    <label>Filled</label>
    <type>Checkbox</type>
</CustomField>