force-app/main/default/objects/Opportunity/fields/Free_Seed_Sale_Validation__c.field-meta.xml
<CustomField>
    <fullName>Free_Seed_Sale_Validation__c</fullName>
    <description>Checked if every product has &lt;= 1 unit by 140k</description>
    <formula>( Max_Unit_by_140k_value__c &lt;= 1 &amp;&amp;  Min_Unit_by_140k__c &lt;= 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if every product has &lt;= 1 unit by 140k</inlineHelpText>
    <label>Free Seed Sale Validation</label>
    <type>Checkbox</type>
</CustomField>