force-app/main/default/objects/Opportunity/fields/Grower__c.field-meta.xml
<CustomField>
    <fullName>Grower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Grower)</relationshipLabel>
    <relationshipName>Grower_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>