force-app/main/default/objects/Opportunity/fields/Incentive_Procesed__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Procesed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine if this opportunity has been calculated for the Incentive Snapshots.</description>
    <label>Incentive Procesed</label>
    <type>Checkbox</type>
</CustomField>