force-app/main/default/objects/Opportunity/fields/Incentive_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive Snapshot</label>
    <referenceTo>Incentive_Snapshot__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>