force-app/main/default/objects/Opportunity/fields/Incoterm_1__c.field-meta.xml
<CustomField>
    <fullName>Incoterm_1__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DED - Deliver to ship-to address</fullName>
                <default>true</default>
                <label>DED - Deliver to ship-to address</label>
            </value>
            <value>
                <fullName>DEP - Pick Up</fullName>
            </value>
            <value>
                <fullName>CFR - Cost and Freight</fullName>
            </value>
            <value>
                <fullName>CIF - Cost Insurance and Freight</fullName>
            </value>
            <value>
                <fullName>CIP - Carriage and Insurance Paid (To)</fullName>
            </value>
            <value>
                <fullName>CPT - Carriage Paid To</fullName>
            </value>
            <value>
                <fullName>DAP - Delivered At Place</fullName>
            </value>
            <value>
                <fullName>DAT - Delivered At Terminal</fullName>
            </value>
            <value>
                <fullName>DDP - Delivered Duty Paid</fullName>
            </value>
            <value>
                <fullName>DIB - Deliver</fullName>
            </value>
            <value>
                <fullName>EXW - Ex Works</fullName>
            </value>
            <value>
                <fullName>FAS - Free Alongside Ship</fullName>
            </value>
            <value>
                <fullName>FCA - Free Carrier</fullName>
            </value>
            <value>
                <fullName>FOB - Free On Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>