force-app/main/default/objects/Opportunity/fields/Incoterm_2__c.field-meta.xml
<CustomField>
    <fullName>Incoterm_2__c</fullName>
    <label>Incoterm 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MARION</fullName>
            </value>
            <value>
                <fullName>NEWPORT</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>