force-app/main/default/objects/Opportunity/fields/InsertRef__c.field-meta.xml
<CustomField>
    <fullName>InsertRef__c</fullName>
    <label>InsertRef</label>
    <length>64</length>
    <type>Text</type>
</CustomField>