force-app/main/default/objects/Opportunity/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Marca</valueSetName>
    </valueSet>
</CustomField>