force-app/main/default/objects/Opportunity/fields/Max_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Price__c</fullName>
    <label>Max Price</label>
    <summarizedField>OpportunityLineItem.Price_by_140K_value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>