force-app/main/default/objects/Opportunity/fields/Max_Unit_by_140k_value__c.field-meta.xml
<CustomField>
    <fullName>Max_Unit_by_140k_value__c</fullName>
    <description>Max unit by 140k value of all products related to this opportunity.</description>
    <inlineHelpText>Max unit by 140k value of all products related to this opportunity.</inlineHelpText>
    <label>Max Unit by 140k value</label>
    <summarizedField>OpportunityLineItem.Quantity_by_140k_value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>