force-app/main/default/objects/Opportunity/fields/Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Price__c</fullName>
    <label>Min Price</label>
    <summarizedField>OpportunityLineItem.Price_by_140K_value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>