force-app/main/default/objects/Opportunity/fields/Min_Unit_by_140k__c.field-meta.xml
<CustomField>
    <fullName>Min_Unit_by_140k__c</fullName>
    <description>Minimum unit by 140k value of products related to this opportunity.</description>
    <label>Min Unit by 140k</label>
    <summarizedField>OpportunityLineItem.Quantity_by_140k_value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>