force-app/main/default/objects/Opportunity/fields/Nro_Auto_NV__c.field-meta.xml
<CustomField>
    <fullName>Nro_Auto_NV__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Nro Auto NV</label>
    <type>AutoNumber</type>
</CustomField>