force-app/main/default/objects/Opportunity/fields/Nro_Pedido_SAP__c.field-meta.xml
<CustomField>
    <fullName>Nro_Pedido_SAP__c</fullName>
    <externalId>true</externalId>
    <label>SAP Order Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>