force-app/main/default/objects/Opportunity/fields/Order_comments__c.field-meta.xml
<CustomField>
    <fullName>Order_comments__c</fullName>
    <label>Comments</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>