force-app/main/default/objects/Opportunity/fields/Pilot_Order__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pilot Order</label>
    <type>Checkbox</type>
</CustomField>