force-app/main/default/objects/Opportunity/fields/Production_Year__c.field-meta.xml
<CustomField>
    <fullName>Production_Year__c</fullName>
    <formula>IF(TEXT(Type)=&quot;Z17 - PARENT SEED&quot;, LEFT(TEXT(Safra__c),2) + &quot;/20&quot; + TEXT(VALUE(LEFT(TEXT(Safra__c),2))+1),TEXT(VALUE(LEFT(TEXT(Safra__c),2))-1) + &quot;/20&quot; + LEFT(TEXT(Safra__c),2))</formula>
    <label>Production Season</label>
    <type>Text</type>
</CustomField>