force-app/main/default/objects/Opportunity/fields/Rejection_comment__c.field-meta.xml
<CustomField>
    <fullName>Rejection_comment__c</fullName>
    <label>Rejection comment</label>
    <length>140</length>
    <type>Text</type>
</CustomField>