force-app/main/default/objects/Opportunity/fields/Report_Approval_Detail__c.field-meta.xml
<CustomField>
    <fullName>Report_Approval_Detail__c</fullName>
    <formula>IF(Sale_Price_Value__c!=0,&quot;Sale Price discount is over the limit &quot;,&quot;&quot;) + IF(Royalty_Rate_Value__c!=0,&quot;Royalty Rate discount is over the limit&quot;,&quot;&quot;)</formula>
    <label>Report Approval Detail</label>
    <type>Text</type>
</CustomField>