force-app/main/default/objects/Opportunity/fields/Report_Validation_Production__c.field-meta.xml
<CustomField>
    <fullName>Report_Validation_Production__c</fullName>
    <label>Report Validation Production</label>
    <summarizedField>OpportunityLineItem.Report_Validation_Prod__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>