force-app/main/default/objects/Opportunity/fields/Royalty_Estimation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Estimation_Amount__c</fullName>
    <label>Royalty Estimation Amount</label>
    <summarizedField>OpportunityLineItem.Royalty_Estimation__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>