force-app/main/default/objects/Opportunity/fields/Royalty_Rate_Value__c.field-meta.xml
<CustomField>
    <fullName>Royalty_Rate_Value__c</fullName>
    <label>Royalty Rate Value</label>
    <summarizedField>OpportunityLineItem.Royalty_Rate_Validation__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>