force-app/main/default/objects/Opportunity/fields/Sale_Order_Price_Validation_One__c.field-meta.xml
<CustomField>
    <fullName>Sale_Order_Price_Validation_One__c</fullName>
    <description>Checked if a product doesn&apos;t fall between $45 - $50</description>
    <formula>(Min_Price__c &lt; 45 || Max_Price__c &gt; 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if a product doesn&apos;t fall between $45 - $50</inlineHelpText>
    <label>Sale Order Price Validation One</label>
    <type>Checkbox</type>
</CustomField>