force-app/main/default/objects/Opportunity/fields/Sale_Order_Price_Validation_Two__c.field-meta.xml
<CustomField>
    <fullName>Sale_Order_Price_Validation_Two__c</fullName>
    <description>Checked if any product price &lt; $45</description>
    <formula>(Min_Price__c &lt; 45 || Max_Price__c &lt; 45)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if any product price &lt; $45</inlineHelpText>
    <label>Sale Order Price Validation Two</label>
    <type>Checkbox</type>
</CustomField>