force-app/main/default/objects/Opportunity/fields/Sale_Price_Value__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price_Value__c</fullName>
    <label>Sale Price Value</label>
    <summarizedField>OpportunityLineItem.Sale_Price_Validation__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>