force-app/main/default/objects/Opportunity/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US00 - Without office</fullName>
                <default>true</default>
                <label>US00 - Without office</label>
            </value>
            <value>
                <fullName>US01 - Exterior</fullName>
            </value>
            <value>
                <fullName>US02 - North Corn Belt</fullName>
            </value>
            <value>
                <fullName>US03 - Mindaka</fullName>
            </value>
            <value>
                <fullName>US04 - West</fullName>
            </value>
            <value>
                <fullName>US05 - Eastern Corn Belt</fullName>
            </value>
            <value>
                <fullName>US06 - Central Cornbelt</fullName>
            </value>
            <value>
                <fullName>US07 - Midsouth</fullName>
            </value>
            <value>
                <fullName>US08 - East Coast</fullName>
            </value>
            <value>
                <fullName>US09 - Grand Lakes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>