force-app/main/default/objects/Opportunity/fields/SAP_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>SAP_Integration_Error__c</fullName>
    <label>SAP Integration Error</label>
    <type>TextArea</type>
</CustomField>