force-app/main/default/objects/Opportunity/fields/Seed_Type__c.field-meta.xml
<CustomField>
    <fullName>Seed_Type__c</fullName>
    <label>Seed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent Seed</fullName>
            </value>
            <value>
                <fullName>Test Seed</fullName>
            </value>
            <value>
                <fullName>Wholesale Seed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>