force-app/main/default/objects/Opportunity/fields/Seller_Price__c.field-meta.xml
<CustomField>
    <fullName>Seller_Price__c</fullName>
    <label>Seller Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>