force-app/main/default/objects/Opportunity/fields/SendEmailOnce__c.field-meta.xml
<CustomField>
    <fullName>SendEmailOnce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmailOnce</label>
    <type>Checkbox</type>
</CustomField>