force-app/main/default/objects/Opportunity/fields/Ship_To_Account_Sap_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account_Sap_Number__c</fullName>
    <formula>Ship_To__r.CodigoSAP__c</formula>
    <label>Ship To Account Sap Number</label>
    <type>Text</type>
</CustomField>