force-app/main/default/objects/Opportunity/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <formula>Ship_To__r.BillingCity</formula>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>