force-app/main/default/objects/Opportunity/fields/Ship_To_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact_Email__c</fullName>
    <formula>Contact_of_Shipping__r.Email</formula>
    <label>Ship To Contact Email</label>
    <type>Text</type>
</CustomField>