force-app/main/default/objects/Opportunity/fields/Ship_To_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact_Phone__c</fullName>
    <formula>Contact_of_Shipping__r.Phone</formula>
    <label>Ship To Contact Phone</label>
    <type>Text</type>
</CustomField>