force-app/main/default/objects/Opportunity/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <formula>Ship_To__r.BillingCountry</formula>
    <label>Ship To Country</label>
    <type>Text</type>
</CustomField>