force-app/main/default/objects/Opportunity/fields/Ship_to_location__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_location__c</fullName>
    <formula>Ship_To__r.Location__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Location Region</label>
    <type>Text</type>
</CustomField>