force-app/main/default/objects/Opportunity/fields/Ship_To_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_State_Province__c</fullName>
    <formula>Ship_To__r.BillingState</formula>
    <label>Ship To State/Province</label>
    <type>Text</type>
</CustomField>