force-app/main/default/objects/Opportunity/fields/Ship_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street__c</fullName>
    <formula>Ship_To__r.BillingStreet</formula>
    <label>Ship To Street</label>
    <type>Text</type>
</CustomField>