force-app/main/default/objects/Opportunity/fields/Ship_To_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Zip_Postal_Code__c</fullName>
    <formula>Ship_To__r.BillingPostalCode</formula>
    <label>Ship To Zip/Postal Code</label>
    <type>Text</type>
</CustomField>