force-app/main/default/objects/Opportunity/fields/Shipping_instruction__c.field-meta.xml
<CustomField>
    <fullName>Shipping_instruction__c</fullName>
    <label>Shipping instruction</label>
    <length>254</length>
    <type>Text</type>
</CustomField>