force-app/main/default/objects/Opportunity/fields/Sociedad_SF__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_SF__c</fullName>
    <formula>&quot;U001&quot;</formula>
    <label>Sociedad SF</label>
    <type>Text</type>
</CustomField>