force-app/main/default/objects/Opportunity/fields/Split_Seed_Tracks__c.field-meta.xml
<CustomField>
    <fullName>Split_Seed_Tracks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if you have SPLIT and SEED TRACKS record into two. Going from Editable back to Approved status will inactivate one of them.</inlineHelpText>
    <label>Split Seed Tracks</label>
    <type>Checkbox</type>
</CustomField>