force-app/main/default/objects/Opportunity/fields/Status_Integracion__c.field-meta.xml
<CustomField>
    <fullName>Status_Integracion__c</fullName>
    <label>Status Integración SAP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>