force-app/main/default/objects/Opportunity/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZO13 - Export Order</fullName>
            </value>
            <value>
                <fullName>ZO14 – Local Order</fullName>
                <default>true</default>
                <label>ZO14 – Local Order - Seeds</label>
            </value>
            <value>
                <fullName>ZO15 - Local Order</fullName>
                <label>ZO15 - Local Order - Royalty</label>
            </value>
            <value>
                <fullName>Customer Goal</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>