force-app/main/default/objects/Opportunity/fields/triggerEmailApproval__c.field-meta.xml
<CustomField>
    <fullName>triggerEmailApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>triggerEmailApproval</label>
    <type>Checkbox</type>
</CustomField>