force-app/main/default/objects/Opportunity/fields/Was_Approved__c.field-meta.xml
<CustomField>
    <fullName>Was_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Approved</label>
    <type>Checkbox</type>
</CustomField>