force-app/main/default/objects/Opportunity/recordTypes/AnexoI.recordType-meta.xml
<RecordType>
    <fullName>AnexoI</fullName>
    <active>true</active>
    <businessProcess>Portal Reports</businessProcess>
    <label>Appendix I</label>
</RecordType>