force-app/main/default/objects/Opportunity/recordTypes/AnexoII.recordType-meta.xml
<RecordType>
    <fullName>AnexoII</fullName>
    <active>false</active>
    <businessProcess>Portal Reports</businessProcess>
    <label>Appendix II</label>
</RecordType>