force-app/main/default/objects/Opportunity/recordTypes/Budget.recordType-meta.xml
<RecordType>
    <fullName>Budget</fullName>
    <active>true</active>
    <businessProcess>Estimate%2C Offer and Goals</businessProcess>
    <label>Budget</label>
</RecordType>