force-app/main/default/objects/Opportunity/recordTypes/GPOS_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>GPOS_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Portal Reports</businessProcess>
    <label>GPOS Opportunity</label>
</RecordType>