force-app/main/default/objects/Opportunity/recordTypes/Production_Report.recordType-meta.xml
<RecordType>
    <fullName>Production_Report</fullName>
    <active>true</active>
    <businessProcess>Portal Reports</businessProcess>
    <label>Production Report</label>
</RecordType>